Oppdater utgave etter siste feiloppdaterong

--- a/HRE-WindowsBuilder/src/hre/code/main_nor.properties
+++ b/HRE-WindowsBuilder/src/hre/code/main_nor.properties
@@ -2,7 +2,7 @@ HelpAbout_0=Om HRE
 HelpAbout_3=\ \ \ \ \ 
 HelpAbout_4=
 HelpAbout_6=\r\nHistory Research \r\nEnvironment\r\n\r\nVersjon 0.01.0003\r\n2018-NLS
-HelpAbout_8=HRE code is copyright to HRE Pty Ltd, as released \r\n        under GNU Affero General Public Licence \r\nIcons used from http://www.defaulticon.com \r\n       © copyright interactivemania 2010-2011, \r\n       as released under CC BY ND 3.0 \r\n\r\n Hvis du ønsker å bidra til videre utvikling\r\n       av HRE, gå til vårt nettsted på\r\n       www.historyresearchenvironment.org/Donate/
+HelpAbout_8=HRE code is copyright to HRE Pty Ltd, as released \r\n        under GNU Affero General Public Licence \r\nIcons used from http://www.defaulticon.com \r\n       Â© copyright interactivemania 2010-2011, \r\n       as released under CC BY ND 3.0 \r\n\r\n Hvis du Ã¸nsker Ã¥ bidra til videre utvikling\r\n       av HRE, gÃ¥ til vÃ¥rt nettsted pÃ¥\r\n       www.historyresearchenvironment.org/Donate/
 MainWindow_1=\ \ HRE - History Research Environment - Norsk
 MainWindow_10=Kopier Prosjekt
 MainWindow_100=Vedlikehold Repository Flags...
@@ -13,14 +13,9 @@ MainWindow_104=Vedlikehold Repository Link Notepads...
 MainWindow_105=Bilder...
 MainWindow_106=Valg av...
 MainWindow_107=Valg liste
-MainWindow_108=Nylig brukt
-<<<<<<< HEAD
-MainWindow_109=Admintstrer Bilder...
+MainWindow_108=Nylig bruk
+MainWindow_109=Administrer Bilder...
 MainWindow_11=Nytt navn pÃ¥ project
-=======
-MainWindow_109=Manage Images...
-MainWindow_11=Nytt navn på project
->>>>>>> parent of 3b2171b... Update main_nor.properties
 MainWindow_110=Manage Image Flags...
 MainWindow_111=Manage Image Notepads...
 MainWindow_112=Select links to...
@@ -59,14 +54,14 @@ MainWindow_141=Referanser
 MainWindow_142=Bilder
 MainWindow_143=Eksterne Filer
 MainWindow_144=Interne Tekster
-MainWindow_145=Verktøy
+MainWindow_145=VerktÃ¸y
 MainWindow_146=Innstillinger...
 MainWindow_147=Klient
 MainWindow_148=Bruker
 MainWindow_149=Server
 MainWindow_15=Lukk og stopp HRE
 MainWindow_150=Monitor
-MainWindow_151=GUI Språk
+MainWindow_151=GUI SprÃ¥k
 MainWindow_152=Prosjekt
 MainWindow_153=Personer
 MainWindow_154=Sted
@@ -83,7 +78,7 @@ MainWindow_163=Application Language...
 MainWindow_164=Select
 MainWindow_165=Delete
 MainWindow_166=Edit
-MainWindow_167=Bruker Språk...
+MainWindow_167=Bruker SprÃ¥k...
 MainWindow_168=Velg
 MainWindow_169=Fjern
 MainWindow_17=Select By...
@@ -123,7 +118,7 @@ MainWindow_36=Add
 MainWindow_37=Delete
 MainWindow_38=Edit
 MainWindow_39=Associates...
-MainWindow_4=Åpne Prosjekt
+MainWindow_4=Ã…pne Prosjekt
 MainWindow_40=Manage Event Associates
 MainWindow_41=Manage Event Associate Flags
 MainWindow_42=Manage Event Associate Notepads
