--- a/HRE-WindowsBuilder/src/hre/code/main_nor.properties
+++ b/HRE-WindowsBuilder/src/hre/code/main_nor.properties
@@ -5,11 +5,11 @@ HelpAbout_6=\r\nHistory Research \r\nEnvironment\r\n\r\nVersjon 0.01.0003\r\n201
 HelpAbout_8=HRE code is copyright to HRE Pty Ltd, as released \r\n        under GNU Affero General Public Licence \r\nIcons used from http://www.defaulticon.com \r\n       © copyright interactivemania 2010-2011, \r\n       as released under CC BY ND 3.0 \r\n\r\n Hvis du ønsker å bidra til videre utvikling\r\n       av HRE, gå til vårt nettsted på\r\n       www.historyresearchenvironment.org/Donate/
 MainWindow_1=\ \ HRE - History Research Environment - Norsk
 MainWindow_10=Kopier Prosjekt
-MainWindow_100=Vedlikehold Repository Flags...
-MainWindow_101=Vedlikehold Repository Notepads...
-MainWindow_102=Vedlikehold Repository-Source Links...
-MainWindow_103=Vedlikehold Repository Link Flags...
-MainWindow_104=Vedlikehold Repository Link Notepads...
+MainWindow_100=Vedlikehold Repo Flags...
+MainWindow_101=Vedlikehold Repo Notepads...
+MainWindow_102=Vedlikehold Repo-Source Links...
+MainWindow_103=Vedlikehold Repo Link Flags...
+MainWindow_104=Vedlikehold Repo Link Notepads...
 MainWindow_105=Bilder...
 MainWindow_106=Valg av...
 MainWindow_107=Valg liste
